Add feature "robotsHide"

--- a/language/en-GB/en-GB.mod_toastghsvs.ini
+++ b/language/en-GB/en-GB.mod_toastghsvs.ini
@@ -4,3 +4,5 @@ MOD_TOASTGHSVS="Meldungen anzeigen by GHSVS.de"
 MOD_TOASTGHSVS_XML_DESCRIPTION="Modul zur Anzeige von Meldungen (Bootstrap-5-Toasts). Anzeigehäufigkeit kann eingestellt werden (Cookie-gesteuert)."
 
 MOD_TOASTGHSVS_FIELD_PREPARE_CONTENT_LABEL="Inhalt mit Plugins vorbereiten."
+
+MOD_TOASTGHSVS_FIELD_ROBOTSHIDE="Hide for bots, search engines etc."
