@since Bootstrap 5.2 needed. Add setting FORCEPOSITION

--- a/src/language/en-GB/en-GB.mod_toastghsvs.ini
+++ b/src/language/en-GB/en-GB.mod_toastghsvs.ini
@@ -6,3 +6,6 @@ MOD_TOASTGHSVS_XML_DESCRIPTION="Modul zur Anzeige von Meldungen (Bootstrap-5-Toa
 MOD_TOASTGHSVS_FIELD_PREPARE_CONTENT_LABEL="Inhalt mit Plugins vorbereiten."
 
 MOD_TOASTGHSVS_FIELD_ROBOTSHIDE="Hide for bots, search engines etc."
+
+MOD_TOASTGHSVS_FIELD_FORCEPOSITION="Force position CSS class"
+MOD_TOASTGHSVS_FIELD_FORCEPOSITION_DESC="Since Bootstrap version 5.2.0, the BS-CSS forces a position:absolute, which can lead to unwanted alignment in module positions. Choose NONE if you want your CSS file to decide. I always use setting position-relative for a normal alignment in module positions."
